# ainventory-public

./: README.md  endpoints_documentation.json  package-lock.json  prompt mcp.md
nuevo-backend/: docker-compose.yml  fieesoft_tools.py  gmail_tools.py  init.sql  main.py  pyproject.toml  test_api.py  test_gmail.py
